objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IFE_B2B_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Document_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked when the email for the contact has been verified, either automatically via lead-to-contact creation or manually.</description>
        <label>IFE Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Maintenance_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Repair_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repair Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Sales_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_AIE_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIE Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_APEX_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APEX Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Account_Owner__c</fullName>
        <description>This field pulls in Account owner to be displayed at the contact</description>
        <formula>Account.Owner.L2I_Preferred_Name__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Ad_Contact_Account_Type__c</fullName>
        <description>This is supposed to pull the Contact&#39;s Account Type from the Account Object&#39;s Account Type</description>
        <formula>TEXT(Account.Type)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Airbus_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Airbus Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Airshow_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Airshow Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Contact_Region__c</fullName>
        <description>The region picklist for the Contact object</description>
        <inlineHelpText>Please select the region the contact is associated with.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Region_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Facebook_Profile__c</fullName>
        <description>allows reps to add a link to the contact&#39;s Facebook profile</description>
        <inlineHelpText>Please enter a link to the contact&#39;s Facebook profile.</inlineHelpText>
        <label>Facebook Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_First_Name__c</fullName>
        <description>Field for Advertising Sales to enter the contact&#39;s first name.</description>
        <inlineHelpText>Please enter the contact&#39;s first name.</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Holiday_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holiday Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Kids_Names__c</fullName>
        <description>A field for Advertising Sales to enter the contact&#39;s kids&#39; names.</description>
        <inlineHelpText>Please enter the contact&#39;s kids&#39; names.</inlineHelpText>
        <label>Kids&#39; Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Last_Name__c</fullName>
        <description>Field for Advertising Sales to enter the contact&#39;s last name.</description>
        <inlineHelpText>Please enter the contact&#39;s last name.</inlineHelpText>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_LinkedIn_Profile__c</fullName>
        <description>Allows users to enter the LinkedIn profile of the contact</description>
        <inlineHelpText>Please enter the URL of the contact&#39;s LinkedIn profile.</inlineHelpText>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_MRO_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MRO Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Offering_of_Interest__c</fullName>
        <label>Offering of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Flight Entertainment (IFE)</fullName>
                </value>
                <value>
                    <fullName>In-Flight Connectivity (IFC)</fullName>
                </value>
                <value>
                    <fullName>Digital Services &amp; Solutions (DSS)</fullName>
                </value>
                <value>
                    <fullName>Panasonic Technical Services (PTS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Opt_In__c</fullName>
        <label>Opt-In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newsletter &amp; Blog</fullName>
                </value>
                <value>
                    <fullName>Press Releases</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Solutions Updates</fullName>
                </value>
                <value>
                    <fullName>Trade Shows &amp; Panasonic Hosted Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Panasonic_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Panasonic Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_QBR_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QBR Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Responsibilities__c</fullName>
        <description>For Advertising Sales to capture the contact&#39;s job or role responsibilities</description>
        <inlineHelpText>Please provide a short description of this contact&#39;s responsibilities</inlineHelpText>
        <label>Responsibilities</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Spouse_Name__c</fullName>
        <description>A field for Advertising Sales to enter the contact&#39;s spouse&#39;s name.</description>
        <inlineHelpText>Please enter the contact&#39;s spouse&#39;s name</inlineHelpText>
        <label>Spouse Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Tell_Us_More__c</fullName>
        <label>Tell Us More</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Topic_of_Interest__c</fullName>
        <label>Topic_of_Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Our Offerings</fullName>
                </value>
                <value>
                    <fullName>Careers</fullName>
                </value>
                <value>
                    <fullName>Inflight Wi-Fi Support (Passengers Only)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Twitter_Profile__c</fullName>
        <description>a field for reps to put the contact&#39;s Twitter profile</description>
        <inlineHelpText>Please enter the Twitter profile of the contact</inlineHelpText>
        <label>Twitter Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Offering_of_Interest_C__c</fullName>
        <label>Offering of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platforms</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <label>Opt-In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newsletter &amp; Blog</fullName>
                </value>
                <value>
                    <fullName>Press Releases</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Solutions Updates</fullName>
                </value>
                <value>
                    <fullName>Trade Shows &amp; Panasonic Hosted Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contact ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_Contact_Number__c</fullName>
        <label>Contact Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>L2I_Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <inlineHelpText>Primary Phone Extension</inlineHelpText>
        <label>Phone Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>xxRegion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>MECSAA (Middle East, Central and Southern Asia, and Africa)</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tell_Us_More__c</fullName>
        <label>Tell Us More</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topic_Of_Interest__c</fullName>
        <label>Topic of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Our Offerings</fullName>
                </value>
                <value>
                    <fullName>Careers</fullName>
                </value>
                <value>
                    <fullName>Inflight Wi-Fi Support (Passengers Only)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Account.L2I_Site_Id__c</columns>
        <columns>PT_Site__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>Launch_Customer_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Account.L2I_Site_Id__c</columns>
        <columns>PT_Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_NUMBER</field>
            <operation>equals</operation>
            <value>1091,1114,5072,1022,13802,6090,11081,2760,1435,1481,4342</value>
        </filters>
        <label>Launch Customer Contact</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Operations</fullName>
        <active>true</active>
        <label>Operations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>L2I_Community_User_Email_Validation</fullName>
        <active>false</active>
        <description>validation rule to check allowed email domains before creating a new contact</description>
        <errorConditionFormula>OR(ISBLANK(Account.Allowed_Domains__c),
			ISBLANK(Email),
NOT(CONTAINS(Account.Allowed_Domains__c, (SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)))))</errorConditionFormula>
        <errorMessage>Email domain must match the Allowed Domains field on the Account</errorMessage>
    </validationRules>
</CustomObject>